<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDigiDestined">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stretchColumns="1">
            <TableRow
                android:id="@+id/itemCourage"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgCourage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/taichi"/>
                <TextView
                    android:id="@+id/textCourage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/taichi"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemFriendship"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgFriendship"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/yamato"/>
                <TextView
                    android:id="@+id/textFriendship"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/yamato"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemLove"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgLove"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sora"/>
                <TextView
                    android:id="@+id/textLove"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/sora"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemKnowledge"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgKnowledge"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/koshiro"/>
                <TextView
                    android:id="@+id/textKnowledge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/koshiro"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemPurity"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgPurity"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mimi"/>
                <TextView
                    android:id="@+id/textPurity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/mimi"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemHonesty"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgHonesty"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/joe"/>
                <TextView
                    android:id="@+id/textHonesty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/joe"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemHope"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgHope"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/takeru"/>
                <TextView
                    android:id="@+id/textHope"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/takeru"/>
            </TableRow>
            <TableRow
                android:id="@+id/itemLight"
                android:background="#aaa"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/imgLight"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hikari"/>
                <TextView
                    android:id="@+id/textLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:background="#ff0"
                    android:textSize="30sp"
                    android:text="@string/hikari"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnDigiDestined"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/digi_destined"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnDigimon"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintBottom_toTopOf="@id/button"/>
    <Button
        android:id="@+id/btnDigimon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/digimon"
        app:layout_constraintLeft_toRightOf="@id/btnDigiDestined"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintBottom_toTopOf="@id/button"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>